--- a/exercicio_revisao/css/index.css
+++ b/exercicio_revisao/css/index.css
@@ -9,7 +9,6 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url('../img/img_index.jpg'); 
     background-size: cover;
     background-position: center;
     background-attachment: fixed; 
@@ -18,19 +17,19 @@ body {
     width: 90%; 
     max-width: 400px;
     padding: 20px;
-    background-color: #2a2a72; /* Azul-escuro */
-    border: 2px solid #1c1c3c; /* Azul mais escuro */
+    background-color: #2a2a72; 
+    border: 2px solid #1c1c3c; 
     border-radius: 8px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
     text-align: center;
 }
 .login h1 {
-    color: #f4f4f9; /* Quase branco */
+    color: #f4f4f9;
     margin-bottom: 20px;
     font-size: 1.5em; 
 }
 .error {
-    color: #ff4d4d; /* Vermelho vibrante */
+    color: #ff4d4d; 
     margin-bottom: 15px;
 }
 label {
@@ -47,14 +46,14 @@ input[type="password"] {
     margin-top: 5px;
     border: 1px solid #1c1c3c;
     border-radius: 4px;
-    background-color: #d9e4ff; /* Azul-claro */
+    background-color: #d9e4ff;
     color: #1c1c3c;
 }
 button[type="submit"] {
     width: 100%;
     padding: 10px;
     margin-top: 15px;
-    background-color: #1c1c3c; /* Azul mais escuro */
+    background-color: #1c1c3c;
     color: #f4f4f9; 
     border: none;
     border-radius: 4px;
@@ -64,7 +63,7 @@ button[type="submit"] {
     transition: 0.3s;
 }
 button[type="submit"]:hover {
-    background-color: #4c4cff; /* Azul vibrante */
+    background-color: #4c4cff;
     color: #ffffff;
 }
 #cadastro {
@@ -76,7 +75,7 @@ button[type="submit"]:hover {
     font-weight: bold;
 }
 #cadastro:hover {
-    color: #4c4cff; /* Azul vibrante */
+    color: #4c4cff;
 }
 @media (max-width: 600px) {
     .login {
